--- a/dsxys.conf
+++ b/dsxys.conf
@@ -1,5 +1,5 @@
 [rewrite_local]
-#大师兄影祝去开屏广告
+#大师兄影视去开屏广告
 ^https?:\/\/sdk\.alibaba\.com\.ailbaba\.me\/xgapp\.php\/v3\/top_notice? url reject
 ^https?:\/\/sdk\.alibaba\.com\.ailbaba\.me\/xgapp\.php\/v3\/advert.position.[^2](?<=position..) url reject
 
