更新 bilibili.conf

--- a/bilibili.conf
+++ b/bilibili.conf
@@ -9,4 +9,4 @@
 # ～ 哔哩哔哩繁体CC字幕转中文简体
 ^https?:\/\/i.\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://raw.githubusercontent.com/imao7/Surge/master/bilibilicc.js
 [mitm]
-hostname = api.bilibili.com, app.bilibili.com, ap?.bilibili.com, i0.hdslb.com
+hostname = api.bilibili.com, app.bilibili.com, i0.hdslb.com
