--- a/dsxys.conf
+++ b/dsxys.conf
@@ -1,8 +1,5 @@
 [rewrite_local]
-#大师兄影视去开屏广告
-^https?:\/\/sdk\.alibaba\.com\.ailbaba\.me\/xgapp\.php\/v3\/top_notice? url reject
-^https?:\/\/sdk\.alibaba\.com\.ailbaba\.me\/xgapp\.php\/v3\/advert.position.[^2](?<=position..) url reject
-
+#大师兄影视去开屏广告(加解集)
+^https?:\/\/sdk\.alibaba\.com\.ailbaba\.me\/(dsx|xgapp)\.php\/v\d\/(top_notice\?|version|advert\?position=[^2]+) url reject-200
 [mitm]
-
 hostname = sdk.alibaba.com.ailbaba.me
