更新 YoutubeAds.snippet

--- a/YoutubeAds.conf
+++ b/YoutubeAds.conf
@@ -1,5 +1,5 @@
 [rewrite_local]                                  
-^https?:\/\/[\w-]+\.googlevideo\.com\/initplayback.+&oad url reject-200
+^https?:\/\/[\w-]+\.googlevideo\.com\/initplayback.+&oad url reject-img
 ^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next|player|search|reel\/reel_watch_sequence|guide|account\/get_setting)\? url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube.js
 [mitm]
 hostname = *.googlevideo.com,youtubei.googleapis.com
