--- a/bilibili.conf
+++ b/bilibili.conf
@@ -55,6 +55,6 @@
 #hostname=api.bilibili.com, app.bilibili.com,
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/imao7/Surge/master/bili1080%2B.js
 # ～ 哔哩哔哩繁体CC字幕转中文简体
-^https?:\/\/i.\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://raw.githubusercontent.com/imao7/Surge/master/bilibilicc.js
+;^https?:\/\/i.\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://raw.githubusercontent.com/imao7/Surge/master/bilibilicc.js
 [mitm]
 hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bilibili.*, grpc.biliapi.net,*biliapi.net, *.hdslb.com
