--- a/exhentai.conf
+++ b/exhentai.conf
@@ -1,2 +1,2 @@
-^https:\/\/exhentai\.org\/ url request-header Cookie: yay=louder request-header Cookie: sk=7amnahaa9mfgo8uyyuirtfnasxp8; sl=dm_2; igneous=e4697eead; ipb_member_id=7323726; ipb_pass_hash=f1f26ed475f78827155a891984f99aaa
+^https:\/\/exhentai\.org\/ url request-header Cookie request-header Cookie: ipb_session_id=c96ffacc5738252d921887d5428c5d77; ipb_member_id=7323544; ipb_pass_hash=3b021e50432810d9aa9f4722fb84ce5a; ipb_coppa=0
 hostname = exhentai.org
