更新 exhentai.conf

--- a/exhentai.conf
+++ b/exhentai.conf
@@ -1,2 +1,2 @@
-^https:\/\/exhentai\.org\/ url request-header Cookie request-header Cookie: ipb_member_id=7323544; ipb_pass_hash=3b021e50432810d9aa9f4722fb84ce5a; yay=louder; igneous=696851a1c; sl=dm_1
+^https:\/\/exhentai\.org* url request-header Cookie: request-header Cookie: igneous=696851a1c; ipb_member_id=7323544; ipb_pass_hash=3b021e50432810d9aa9f4722fb84ce5a; yay=louder; 
 hostname = exhentai.org
