--- a/exhentai.conf
+++ b/exhentai.conf
@@ -1,2 +1,2 @@
-^https:\/\/exhentai\.org\/ url request-header Cookie: request-header Cookie: igneous=696851a1c; ipb_member_id=7323544; ipb_pass_hash=3b021e50432810d9aa9f4722fb84ce5a; yay=louder; 
+^https:\/\/exhentai\.org\/ url request-header Cookie: request-header Cookie: ipb_session_id=d075d567241b75cca4f8e5a8c312f1f1; ipb_member_id=7323544; ipb_pass_hash=3b021e50432810d9aa9f4722fb84ce5a; ipb_coppa=0 
 hostname = exhentai.org
